# hermes-plugin-line-whitelist

./: .gitattributes  .gitignore  README.md  README_zh-TW.md  plugin.yaml  pyproject.toml  run_tests.py
docs/: adapter-integration.md
patches/: hermes-core-wiring.diff  line-adapter.diff  telegram-discord-cards.diff
src/tools/: line_whitelist_tool.py
tests/: conftest.py  test_line_whitelist_dashboard_plugin.py  test_line_whitelist_store.py  test_line_whitelist_tool.py
